--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -159,6 +159,8 @@ html{
 
 .poster-generate {
     background-color: #1E1E1E;
+    height: 100vh;
+    overflow-y: auto;
 
     > span {
         position: absolute;
@@ -170,7 +172,7 @@ html{
     }
 
     .poster-img-wrapper {
-        height: 100vh;
+        min-height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -183,8 +185,7 @@ html{
         justify-content: center;
         flex-wrap: wrap;
         gap: 0.5rem;
-        padding: 6rem 0;
-        max-height: 100vh;
+        padding: 2rem 0;
 
         p {
             font-size: 1.5rem;
@@ -348,7 +349,47 @@ html{
             }
 
             input {
-                display: none;
+                position: relative;
+                height: 1.5rem;
+                width: 2.6rem;
+                appearance: none;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    height: 1.5rem;
+                    width: 1.5rem;
+                    border-radius: 5000px;
+                    background-color: #ffffff;
+                    transition: all 0.15s ease;
+                    z-index: 1;
+                    cursor: pointer;
+                }
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    top: -1px;
+                    left: -1px;
+                    width: calc(100% + 2px);
+                    height: calc(100% + 2px);
+                    background-color: #ffffff40;
+                    // border: 1px solid #ffffff10;
+                    border-radius: 500rem;
+                    box-sizing: content-box;
+                    cursor: pointer;
+                    transition: all 0.15s ease;
+                }
+
+                &:checked::before {
+                    translate: calc(2.6rem - 1.5rem);
+                }
+
+                &:checked::after {
+                    background-color: #3F97FF60;
+                }
             }
 
             input:checked {
